[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Alexey Bedrinsky <bedrinsky@mail.ru>"]
readme = "README.md"

[tool.poetry.scripts]
say-welcome = 'project3.cli:welcome'

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
